Criando entity Post com user aninhado